@@ -18,3 +18,4 @@ add_subdirectory(electromagnetics)
 add_subdirectory(meshing)
 add_subdirectory(performance)
 add_subdirectory(tools)
+add_subdirectory(nurbs)
