@@ -1,24 +1,24 @@
-//                       MFEM Example 11 - Parallel Version
+//                    MFEM Example 11 - Parallel NURBS Version
 //
 // Compile with: make ex11p
 //
-// Sample runs:  mpirun -np 4 ex11p -m ../data/square-disc.mesh
-//               mpirun -np 4 ex11p -m ../data/star.mesh
-//               mpirun -np 4 ex11p -m ../data/escher.mesh
-//               mpirun -np 4 ex11p -m ../data/fichera.mesh
-//               mpirun -np 4 ex11p -m ../data/square-disc-p2.vtk -o 2
-//               mpirun -np 4 ex11p -m ../data/square-disc-p3.mesh -o 3
-//               mpirun -np 4 ex11p -m ../data/square-disc-nurbs.mesh -o -1
-//               mpirun -np 4 ex11p -m ../data/disc-nurbs.mesh -o -1 -n 20
-//               mpirun -np 4 ex11p -m ../data/pipe-nurbs.mesh -o -1
-//               mpirun -np 4 ex11p -m ../data/ball-nurbs.mesh -o 2
-//               mpirun -np 4 ex11p -m ../data/star-surf.mesh
-//               mpirun -np 4 ex11p -m ../data/square-disc-surf.mesh
-//               mpirun -np 4 ex11p -m ../data/inline-segment.mesh
-//               mpirun -np 4 ex11p -m ../data/amr-quad.mesh
-//               mpirun -np 4 ex11p -m ../data/amr-hex.mesh
-//               mpirun -np 4 ex11p -m ../data/mobius-strip.mesh -n 8
-//               mpirun -np 4 ex11p -m ../data/klein-bottle.mesh -n 10
+// Sample runs:  mpirun -np 4 ex11p -m ../../data/square-disc.mesh
+//               mpirun -np 4 ex11p -m ../../data/star.mesh
+//               mpirun -np 4 ex11p -m ../../data/escher.mesh
+//               mpirun -np 4 ex11p -m ../../data/fichera.mesh
+//               mpirun -np 4 ex11p -m ../../data/square-disc-p2.vtk -o 2
+//               mpirun -np 4 ex11p -m ../../data/square-disc-p3.mesh -o 3
+//               mpirun -np 4 ex11p -m ../../data/square-disc-nurbs.mesh -o -1
+//               mpirun -np 4 ex11p -m ../../data/disc-nurbs.mesh -o -1 -n 20
+//               mpirun -np 4 ex11p -m ../../data/pipe-nurbs.mesh -o -1
+//               mpirun -np 4 ex11p -m ../../data/ball-nurbs.mesh -o 2
+//               mpirun -np 4 ex11p -m ../../data/star-surf.mesh
+//               mpirun -np 4 ex11p -m ../../data/square-disc-surf.mesh
+//               mpirun -np 4 ex11p -m ../../data/inline-segment.mesh
+//               mpirun -np 4 ex11p -m ../../data/amr-quad.mesh
+//               mpirun -np 4 ex11p -m ../../data/amr-hex.mesh
+//               mpirun -np 4 ex11p -m ../../data/mobius-strip.mesh -n 8
+//               mpirun -np 4 ex11p -m ../../data/klein-bottle.mesh -n 10
 //
 // Description:  This example code demonstrates the use of MFEM to solve the
 //               eigenvalue problem -Delta u = lambda u with homogeneous
@@ -54,10 +54,11 @@ int main(int argc, char *argv[])
    MPI_Comm_rank(MPI_COMM_WORLD, &myid);
 
    // 2. Parse command-line options.
-   const char *mesh_file = "../data/star.mesh";
+   const char *mesh_file = "../../data/star.mesh";
    int ser_ref_levels = 2;
    int par_ref_levels = 1;
-   int order = 1;
+   Array<int> order(1);
+   order[0] = 0;
    int nev = 5;
    int seed = 75;
    bool slu_solver  = false;
@@ -146,19 +147,46 @@ int main(int argc, char *argv[])
    //    use continuous Lagrange finite elements of the specified order. If
    //    order < 1, we instead use an isoparametric/isogeometric space.
    FiniteElementCollection *fec;
-   if (order > 0)
+   NURBSExtension *NURBSext = NULL;
+   int own_fec = 0;
+
+   if (order[0] == 0) // Isoparametric
    {
-      fec = new H1_FECollection(order, dim);
+      if (pmesh->GetNodes())
+      {
+         fec = pmesh->GetNodes()->OwnFEC();
+         own_fec = 0;
+         cout << "Using isoparametric FEs: " << fec->Name() << endl;
+      }
+      else
+      {
+         cout <<"Mesh does not have FEs --> Assume order 1.\n";
+         fec = new H1_FECollection(1, dim);
+         own_fec = 1;
+      }
    }
-   else if (pmesh->GetNodes())
+   else if (pmesh->NURBSext && (order[0] > 0) )  // Subparametric NURBS
    {
-      fec = pmesh->GetNodes()->OwnFEC();
+      fec = new NURBSFECollection(order[0]);
+      own_fec = 1;
+      int nkv = pmesh->NURBSext->GetNKV();
+
+      if (order.Size() == 1)
+      {
+         int tmp = order[0];
+         order.SetSize(nkv);
+         order = tmp;
+      }
+      if (order.Size() != nkv ) { mfem_error("Wrong number of orders set."); }
+      NURBSext = new NURBSExtension(pmesh->NURBSext, order);
    }
    else
    {
-      fec = new H1_FECollection(order = 1, dim);
+      if (order.Size() > 1) { cout <<"Wrong number of orders set, needs one.\n"; }
+      fec = new H1_FECollection(abs(order[0]), dim);
+      own_fec = 1;
    }
-   ParFiniteElementSpace *fespace = new ParFiniteElementSpace(pmesh, fec);
+   ParFiniteElementSpace *fespace = new ParFiniteElementSpace(pmesh,NURBSext,fec);
    HYPRE_Int size = fespace->GlobalTrueVSize();
    if (myid == 0)
    {
@@ -357,7 +385,7 @@ int main(int argc, char *argv[])
 #endif
 
    delete fespace;
-   if (order > 0)
+   if (own_fec)
    {
       delete fec;
    }
